
<resources>
    <string name="app_name">MY STOCK HEALTH</string>
    <string name="action_change_units">Change Units</string>
    <string name="add_symbol">Add stock details</string>
    <string name="input_hint">Stock Symbol</string>
    <string name="no_internet_connection">This app requires an internet connection</string>
    <string name="empty_view_no_connection_title" translatable="false">Oops!</string>
    <string name="empty_view_no_connection_message">No internet connection found. Check your connection and try again</string>
    <string name="input_pre_fill" />
    <string name="stock_already_saved">This stock is already saved!</string>
    <string name="stock_not_found" translatable="false">Stock symbol doesn\'t exist!</string>
    <string name="add_stock_quote">Add a new stock quote</string>
    <string name="stock_detail_title">Stock</string>
    <string name="stock_detail_tab1">5 DAYS</string>
    <string name="stock_detail_tab2">2 WEEKS</string>
    <string name="stock_detail_tab3">1 MONTH</string>
    <string name="stock_detail_tab_header" translatable="false">NASDAQ: %1$s</string>
    <string name="disagree">Cancel</string>
    <string name="add">Add</string>
    <string name="offline">Offline</string>
    <string name="try_again">Try again</string>
    <string name="widget_name">My Stock Health</string>
    <string name="empty_view_no_stocks_title">No stocks</string>
    <string name="empty_view_no_stocks_message">Tap + to add a new one</string>
    <string name="opening_url" translatable="false">Opening link</string>
    <string name="fetching_more" translatable="false">Fetching More News</string>
    <string name="fetching_news" translatable="false">Fetching News</string>
    <string name="symbol" translatable="false">Symbol</string>
    <string name="load_more" translatable="false">Loading More Data</string>
    <string name="read_news" translatable="false">Read News</string>
    <string name="stock_news" translatable="false">Related News</string>
    <string name="name" translatable="false">Symbol</string>
    <string name="quantity" translatable="false">Quantity/Cost</string>
    <string name="cost" translatable="false">Purchase cost</string>
    <string name="variation" translatable="false">Variation</string>
    <string name="sign_out" translatable="false">Sign Out</string>
    <string name="symbol_not_found">Symbol not found</string>
    <string name="signin_cancelled" translatable="false">Sign in canceled</string>
    <string name="signed_in" translatable="false">Signed in!</string>
    <string name="quantity_required" translatable="false">Quantity is required!</string>
</resources>
