<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:hint="@string/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/empty_view_text_color"
        android:id="@+id/addSymbol" />
    <EditText
        android:hint="@string/quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/empty_view_text_color"
        android:id="@+id/quatity" />
    <EditText
        android:hint="@string/cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/empty_view_text_color"
        android:id="@+id/purchased_value" />

</LinearLayout>